Fix header spacing

--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -5,8 +5,18 @@ header {
   justify-content: center;
 
   > * {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    @media screen and (min-width: $break-small) {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    @media screen and (min-width: $break-medium) {
+      margin-left: 30px;
+      margin-right: 30px;
+    }
   }
 
   > a {
